config/samples/elasticsearch.msvc_v1_service.yaml
apiVersion: elasticsearch.msvc.kloudlite.io/v1
kind: Service
metadata:
  name: service-sample
spec:
  # TODO(user): Add fields here
