config/samples/influxdb.msvc_v1_service.yaml
apiVersion: influxdb.msvc.kloudlite.io/v1
kind: Service
metadata:
  name: service-sample
spec:
  # TODO(user): Add fields here
